# C-Image-Processing

./: .gitignore  README.md
HomeWork/: CMakeLists.txt  IMG_Processing.c  IMG_Processing.h  Matrx_Calculate.c  Matrx_Calculate.h  cips.h  imageIO.c  main.c
